--- a/src/assets/develop/LOY - Loyalty Points.yaml
+++ b/src/assets/develop/LOY - Loyalty Points.yaml
@@ -43,8 +43,8 @@ fields:
       - 21-30
       - 18-
 
-  - name: Type
-    label: Type
+  - name: OfferType
+    label: Offer Type
     type: string
     size: 1
     example: A
@@ -57,8 +57,8 @@ fields:
       - Banking (B)
       - Travel (T)
 
-  - name: Name
-    label: Name
+  - name: OfferName
+    label: Offer Name
     type: nvarchar8
     size: 255
     example: Qantas Frequent Flyer Points
