Clean up generated go code, and fix example_hex values.
All generated changes are included in this change.

--- a/src/protocol/develop/types/Header.yaml
+++ b/src/protocol/develop/types/Header.yaml
@@ -1,5 +1,6 @@
 metadata:
   name: Header
+  description: "Header contains common details required by every Tokenized message."
 
 fields:
   - name: ProtocolID
