--- a/src/protocol/develop/actions/M1 - Message.yaml
+++ b/src/protocol/develop/actions/M1 - Message.yaml
@@ -66,11 +66,11 @@ fields:
   - name: MessagePayload
     label: Message Payload
     description: >
-      Length only limited by the Bitcoin protocol. Public or private (RSA public key, Diffie-Hellman).
+      Public or private (RSA public key, Diffie-Hellman).
       Issuers/Contracts can send the signifying amount of satoshis to themselves for public
       announcements or private 'notes' if encrypted. See Message Types for a full list of
       potential use cases.
     type: nvarchar32
-    example_hex: "000000000000000c48656c6c6f20776f726c6421"
+    example_hex: "0000000c48656c6c6f20776f726c6421"
     example_value: "Hello world!"
     notes: ""
