--- a/src/protocol/develop/actions/T1 - Transfer.yaml
+++ b/src/protocol/develop/actions/T1 - Transfer.yaml
@@ -39,8 +39,8 @@ fields:
     description: "The number of Assets involved in the Transfer Action."
     type: uint8
     size: 1
-    example_hex: 534843
-    example_value: "4"
+    example_hex: 00
+    example_value: 0
     notes: ""
 
   - name: AssetTypeX
