Add action and type constructor definitions. Update formatting. Fix internal types. Add goimports to makefile after generating code.

--- a/src/protocol/develop/actions/A1 - Asset Definition.yaml
+++ b/src/protocol/develop/actions/A1 - Asset Definition.yaml
@@ -180,3 +180,9 @@ fields:
     example_hex: 736f6d652064617461
     example_value: "some data"
     notes: ""
+
+# Constructor parameters
+constructor:
+    - name: assetType
+      type: string
+      field: AssetType
