--- a/src/protocol/develop/types/NotableRole.yaml
+++ b/src/protocol/develop/types/NotableRole.yaml
@@ -20,3 +20,15 @@ fields:
     example_hex: 0d4a616d65732042656c64696e67
     example_value: "Satoshi Nakamoto"
     notes: ""
+
+# Constructor parameters
+constructor:
+    - name: roleType
+      type: uint
+      size: 1
+      field: Type
+
+    - name: name
+      type: bin
+      field: Name
+      set_method: Set
