--- a/src/protocol/develop/types/Entity.yaml
+++ b/src/protocol/develop/types/Entity.yaml
@@ -6,7 +6,8 @@ fields:
   - name: Name
     label: Name
     description: "Length 1-255 bytes (0 is not valid). Issuing entity (company, organization, individual).  Can be any unique identifying string, including human readable names for branding/vanity purposes. "
-    type: nvarchar8
+    type: varchar
+    size: 255
     size: 11
     example_hex: 0a5465736c6120496e632e
     example_value: "Tesla Inc."
@@ -15,7 +16,7 @@ fields:
   - name: Type
     label: Type
     description: "P - Public Company Limited by Shares, C - Private Company Limited by Shares, I - Individual, L - Limited Partnership, U -Unlimited Partnership, T - Sole Proprietorship, S - Statutory Company, O - Non-Profit Organization, N - Nation State, G - Government Agency, U - Unit Trust, D - Discretionary Trust.  Found in 'Entities' (Specification/Resources)."
-    type: string
+    type: fixedchar
     size: 1
     example_hex: 50
     example_value: "P"
@@ -34,7 +35,8 @@ fields:
   - name: UnitNumber
     label: Unit Number
     description: "Issuer/Entity/Contracting Party X Address Details (eg. HQ)"
-    type: nvarchar8
+    type: varchar
+    size: 255
     size: 2
     example_hex: 0132
     example_value: "2"
@@ -43,7 +45,8 @@ fields:
   - name: BuildingNumber
     label: Building Number
     description: ""
-    type: nvarchar8
+    type: varchar
+    size: 255
     size: 6
     example_hex: 053133353737
     example_value: "13577"
@@ -52,7 +55,8 @@ fields:
   - name: Street
     label: Street
     description: ""
-    type: nvarchar16
+    type: varchar
+    size: 65535
     size: 14
     example_hex: 000c466169726d6f6e7420417665
     example_value: "Fairmont Ave"
@@ -61,7 +65,8 @@ fields:
   - name: SuburbCity
     label: Suburb/City
     description: ""
-    type: nvarchar8
+    type: varchar
+    size: 255
     size: 8
     example_hex: 07526f62696e6f68
     example_value: "Robinoh"
@@ -70,7 +75,7 @@ fields:
   - name: TerritoryStateProvinceCode
     label: Territory/State/Province Code
     description: ""
-    type: string
+    type: fixedchar
     size: 5
     example_hex: 4243000000
     example_value: "BC"
@@ -79,7 +84,7 @@ fields:
   - name: CountryCode
     label: Country Code
     description: ""
-    type: string
+    type: fixedchar
     size: 3
     example_hex: 555341
     example_value: "USA"
@@ -88,7 +93,7 @@ fields:
   - name: PostalZIPCode
     label: Postal/ZIP Code
     description: ""
-    type: string
+    type: fixedchar
     size: 12
     example_hex: 353032313000000000000000
     example_value: "50210"
@@ -97,7 +102,8 @@ fields:
   - name: EmailAddress
     label: Email Address
     description: "Length 0-255 bytes. Address for text-based communication: eg. email address, Bitcoin address"
-    type: nvarchar8
+    type: varchar
+    size: 255
     size: 20
     example_hex: 136a616d657340746f6b656e697a65642e636f6d
     example_value: "satoshi@tokenized.com"
@@ -106,7 +112,8 @@ fields:
   - name: PhoneNumber
     label: Phone Number
     description: "Length 0-50 bytes. 0 is valid. Phone Number for Entity."
-    type: nvarchar8
+    type: varchar
+    size: 255
     size: 11
     example_hex: 0a30343438343834383438
     example_value: "0448484848"
