--- a/src/assets/develop/CUR - Currency.yaml
+++ b/src/assets/develop/CUR - Currency.yaml
@@ -32,7 +32,7 @@ fields:
    
   - name: ISOCode
     label: ISO Code
-    type: string
+    type: fixedchar
     size: 3
     example: AUD
     span: full
@@ -40,7 +40,8 @@ fields:
 
   - name: MonetaryAuthority
     label: Monetary Authority
-    type: nvarchar8
+    type: varchar
+    size: 255
     size: 255
     example: Reserve Bank of Australia
     span: full
@@ -48,7 +49,8 @@ fields:
 
   - name: Description
     label: Description
-    type: nvarchar8
+    type: varchar
+    size: 255
     size: 255
     example: Australian dollar
     span: full
