--- a/src/assets/develop/SHC - Common Share.yaml
+++ b/src/assets/develop/SHC - Common Share.yaml
@@ -42,14 +42,14 @@ fields:
 
   - name: Ticker
     label: Ticker
-    type: string
+    type: fixedchar
     size: 5
     example: AAPL
     displayOrder: 4
 
   - name: ISIN
     label: ISIN (optional)
-    type: string
+    type: fixedchar
     size: 12
     example: US0004026250
     span: full
@@ -57,7 +57,8 @@ fields:
 
   - name: Description
     label: Description
-    type: nvarchar16
+    type: varchar
+    size: 65535
     size: 113
     example: APPLC - Apple corp - Common share issue class C
     span: full
