--- a/src/assets/develop/TIC - Admission Ticket.yaml
+++ b/src/assets/develop/TIC - Admission Ticket.yaml
@@ -46,7 +46,7 @@ fields:
 
   - name: AdmissionType
     label: Admission Type
-    type: string
+    type: fixedchar
     size: 3
     example: MOV - Movie, CON - Conference, MUS - Music/Concert, GAM - Sports/Game/Athletics, EXH - Exhibition
     span: left
@@ -55,7 +55,8 @@ fields:
 
   - name: Venue
     label: Venue
-    type: nvarchar8
+    type: varchar
+    size: 255
     size: 255
     example: Orion Cinemas - 293 Stehpens St, Vancouver, BC V4A 9V1
     span: left
@@ -64,7 +65,8 @@ fields:
 
   - name: Class
     label: Class
-    type: nvarchar8
+    type: varchar
+    size: 255
     size: 255
     example: Gold Class, Platinum, VIP, Section A, etc.
     span: left
@@ -73,7 +75,8 @@ fields:
 
   - name: Area
     label: Area
-    type: nvarchar8
+    type: varchar
+    size: 255
     size: 255
     example: Upper Bowl
     span: left
@@ -82,7 +85,8 @@ fields:
 
   - name: Seat
     label: Seat
-    type: nvarchar8
+    type: varchar
+    size: 255
     size: 255
     example: Sec 1, Row 3, Seat 5, or A122
     span: left
@@ -116,7 +120,8 @@ fields:
 
   - name: Description
     label: Description
-    type: nvarchar16
+    type: varchar
+    size: 65535
     # size: 65,535
     example: Coingeek Conference - London (November 2018).
     span: full
