--- a/src/protocol/develop/actions/R2 - Addition.yaml
+++ b/src/protocol/develop/actions/R2 - Addition.yaml
@@ -28,19 +28,11 @@ fields:
     type: Header
     notes: "Common header data for all actions."
 
-  - name: TextEncoding
-    label: Text Encoding
-    description: " 0 = ASCII, 1 = UTF-8, 2 = UTF-16, 3 = Unicode.  Encoding applies to all 'text' data types. All 'string' types will always be encoded with ASCII.  Where string is selected, all fields will be ASCII."
-    type: uint8
-    size: 1
-    example_hex: 00
-    example_value: "0"
-    notes:
-
   - name: Message
     label: Message
     description: "Length only limited by Bitcoin protocol."
-    type: nvarchar32
+    type: varchar
+    size: 4294967295
     example_hex: 0000000000000008757365726e616d65
     example_value: "username"
     notes: ""
