--- a/src/protocol/develop/types/TargetAddress.yaml
+++ b/src/protocol/develop/types/TargetAddress.yaml
@@ -12,7 +12,7 @@ fields:
   - name: Quantity
     label: Quantity
     description: "Qty of tokens to be frozen, thawed, confiscated or reconciled. For Contract-wide freezes 0 will be used."
-    type: uint64
+    type: uint
     size: 8
     example_hex: 0000000000002710
     example_value: "10000"
