--- a/src/protocol/develop/actions/G4 - Ballot Cast.yaml
+++ b/src/protocol/develop/actions/G4 - Ballot Cast.yaml
@@ -61,7 +61,8 @@ fields:
     label: Vote
     description: "Length 1-255 bytes. 0 is not valid. Accept, Reject, Abstain, Spoiled, Multiple Choice, or Preference List. 15 options total. Order of preference.  1st position = 1st choice. 2nd position = 2nd choice, etc.  A is always Accept and B is always reject in a Y/N votes."
     type: varchar
-    size: 255
+    # varchar size is number of bits to serialize the size of the value
+    size: 8
     example_hex: 0141
     example_value: "A"
     notes: ""
