--- a/src/protocol/develop/types/KeyRole.yaml
+++ b/src/protocol/develop/types/KeyRole.yaml
@@ -16,7 +16,8 @@ fields:
     label: Key Role Name
     description: "Length 0-255 bytes. 0 is valid. Name (eg. John Alexander Smith)"
     type: varchar
-    size: 255
+    # varchar size is number of bits to serialize the size of the value
+    size: 8
     size: 14
     example_hex: 0d4a616d65732042656c64696e67
     example_value: "Satoshi Nakamoto"
