--- a/src/assets/develop/MEM - Membership.yaml
+++ b/src/assets/develop/MEM - Membership.yaml
@@ -67,7 +67,8 @@ fields:
   - name: ID
     label: ID
     type: varchar
-    size: 255
+    # varchar size is number of bits to serialize the size of the value
+    size: 8
     size: 255
     example: 34536457575486868
     span: right
@@ -76,7 +77,8 @@ fields:
   - name: MembershipType
     label: MembershipType
     type: varchar
-    size: 255
+    # varchar size is number of bits to serialize the size of the value
+    size: 8
     size: 255
     example: Director, Silver, Employee
     span: right
@@ -85,7 +87,8 @@ fields:
   - name: Description
     label: Description
     type: varchar
-    size: 65535
+    # varchar size is number of bits to serialize the size of the value
+    size: 16
     example: Rights and duties listed.
     span: full
     displayOrder: 1
