--- a/src/assets/develop/TIC - Admission Ticket.yaml
+++ b/src/assets/develop/TIC - Admission Ticket.yaml
@@ -56,7 +56,8 @@ fields:
   - name: Venue
     label: Venue
     type: varchar
-    size: 255
+    # varchar size is number of bits to serialize the size of the value
+    size: 8
     size: 255
     example: Orion Cinemas - 293 Stehpens St, Vancouver, BC V4A 9V1
     span: left
@@ -66,7 +67,8 @@ fields:
   - name: Class
     label: Class
     type: varchar
-    size: 255
+    # varchar size is number of bits to serialize the size of the value
+    size: 8
     size: 255
     example: Gold Class, Platinum, VIP, Section A, etc.
     span: left
@@ -76,7 +78,8 @@ fields:
   - name: Area
     label: Area
     type: varchar
-    size: 255
+    # varchar size is number of bits to serialize the size of the value
+    size: 8
     size: 255
     example: Upper Bowl
     span: left
@@ -86,7 +89,8 @@ fields:
   - name: Seat
     label: Seat
     type: varchar
-    size: 255
+    # varchar size is number of bits to serialize the size of the value
+    size: 8
     size: 255
     example: Sec 1, Row 3, Seat 5, or A122
     span: left
@@ -121,7 +125,8 @@ fields:
   - name: Description
     label: Description
     type: varchar
-    size: 65535
+    # varchar size is number of bits to serialize the size of the value
+    size: 16
     # size: 65,535
     example: Coingeek Conference - London (November 2018).
     span: full
