--- a/src/protocol/develop/actions/R2 - Addition.yaml
+++ b/src/protocol/develop/actions/R2 - Addition.yaml
@@ -32,7 +32,8 @@ fields:
     label: Message
     description: "Length only limited by Bitcoin protocol."
     type: varchar
-    size: 4294967295
+    # varchar size is number of bits to serialize the size of the value
+    size: 32
     example_hex: 0000000000000008757365726e616d65
     example_value: "username"
     notes: ""
