--- a/src/resources/develop/messages/0001 - Commercial Profile.yaml
+++ b/src/resources/develop/messages/0001 - Commercial Profile.yaml
@@ -14,6 +14,7 @@ fields:
     label: Business Name
     description: "The name of your business"
     type: varchar
-    size: 255
+    # varchar size is number of bits to serialize the size of the value
+    size: 8
     example_value: "Willa Wonka's Chocolate Factory"
     notes: ""
